# my_atoi

./: .gitignore  CMakeLists.txt  main.cpp  solution.cpp  solution.h  task_description.md
src/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
test/: CMakeLists.txt  discardNonAllowedLeadingCharsTest.cpp  isPositiveTest.cpp  myAtoiTest.cpp
tests/: CMakeLists.txt  discard_leading_spaces_test.cpp  discard_leading_zeroes.cpp  fixBoundsTest.cpp  hasSignTest.cpp  has_sign_test.cpp  isNegativeTest.cpp  is_negative_test.cpp  is_positive_test.cpp  my_atoi_test.cpp  number_of_digits_test.cpp  order_of_magnitude_test.cpp  solution_test.cpp
